client/src-tauri/build_err.txt
cargo :     Checking c
lient v0.1.0 (C:\Users
\Zhitn\Desktop\Vvoice\
client\src-tauri)
At line:1 char:1
+ cargo check 2>&1 | O
ut-File build_err.txt 
-Encoding utf8
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpecifi
ed: (        Checking 
cl...ient\sr    c-taur
i):String) [], R    em
oteException
    + FullyQualifiedEr
rorI    d : NativeComm
andError
 
error[E0308]: mismatch
ed types
   --> src\lib.rs:229:
29
    |
229 |                 
     if let Ok(mut gua
rd) = client_thread.bl
ocking_lock() {
    |                 
            ^^^^^^^^^^
^^^   ----------------
------------- this exp
ression has type `toki
o::sync::MutexGuard<'_
, std::option::Option<
_>>`
    |                 
            |
    |                 
            expected `
MutexGuard<'_, Option<
_>>`, found `Result<_,
 _>`
    |
    = note: expected s
truct `tokio::sync::Mu
texGuard<'_, std::opti
on::Option<_>>`
                 found
 enum `Result<_, _>`

warning: unused variab
le: `config`
  --> src\audio.rs:46:
13
   |
46 |         let confi
g = device.default_out
put_config()?;
   |             ^^^^^
^ help: if this is int
entional, prefix it wi
th an underscore: `_co
nfig`
   |
   = note: `#[warn(unu
sed_variables)]` (part
 of `#[warn(unused)]`)
 on by default

warning: unused variab
le: `err_fn`
  --> src\audio.rs:52:
13
   |
52 |         let err_f
n = |err: cpal::Stream
Error| eprintln!("an e
rror occurred on outpu
t stream: {}", err);
   |             ^^^^^
^ help: if this is int
entional, prefix it wi
th an underscore: `_er
r_fn`

For more information a
bout this error, try `
rustc --explain E0308`
.
warning: `client` (lib
) generated 2 warnings
error: could not compi
le `client` (lib) due 
to 1 previous error; 2
 warnings emitted
